styles/style.css
html, body {
  height: 100%;
  margin: 0;
  overflow: hidden;
}

body {
  background: #fdc114;
  color: #FFF;
  font-family: 'VT323', sans-serif;
}

.wrapper {
  display: block;
  text-align: center;
  margin: 0 auto;
  margin-top: 150px;
}

.roles {
    vertical-align: middle;
    overflow: hidden;
}

.roles div {
    transition: margin-top 1.5s ease-in-out;
}

.logo {
  text-indent: -9999px;
  width: 100px;
  height: 82px;
  padding-bottom: 16px;
  background-size: 100px 82px;
}

footer {
  position: absolute;
  width: 100%;
}

.quote {
  text-align: center;
  margin: auto auto;
}

.icon{
  padding: 0;
  margin: 0 auto;
  text-align: center;
  margin: 0 auto;
}

.icons{
  display: block;
  margin: 0 auto;
  padding: 0;
  text-align: center;
}


.page {
  max-width: 640px;
  margin: 60px auto;
  padding: 0 24px;
  font-size: 22px;
}

.page-header h1 {
  font-weight: normal;
  font-size: 48px;
  margin: 8px 0 16px;
}

.back-link {
  color: #FFF;
  text-decoration: none;
  font-size: 20px;
  opacity: 0.9;
}

.back-link:hover {
  opacity: 1;
}

.post-list {
  list-style: none;
  padding: 0;
  margin: 0;
}

.post-list li {
  padding: 8px 0;
  border-bottom: 1px dashed rgba(255, 255, 255, 0.5);
}

.post-list a {
  display: flex;
  justify-content: space-between;
  gap: 16px;
  color: #FFF;
  text-decoration: none;
}

.post-list a:hover .post-title {
  border-bottom: 2px solid #FFF;
}

.post-date {
  opacity: 0.85;
  font-size: 18px;
}

.post p {
  line-height: 1.4;
  margin: 0 0 16px;
}

.post code {
  background: rgba(0, 0, 0, 0.15);
  padding: 0 4px;
  border-radius: 3px;
}

@media only screen and (max-width: 600px) {
  .wrapper-size{
    margin-top: 300px;
    padding: 0px;
    width: 100%;
  }
  .roles-font-size{
    font-size: 32px;
    height: 35px;
  }
  .icon-size{
    width: 32px;
    height: 32px;
    padding: 0;
    margin: 0 auto;
    text-align: center;
    margin: 0 auto;
  } 
  .footer{
    bottom: 10px;
  }
  .quote-font-size{
    font-size: 18px;
  }
}
@media only screen and (min-width: 601px) {
  .wrapper-size{
    padding: 100px;
    width: 530px;
  }
  .icon-size{
    width: 30px;
    height: 30px;
    padding: 0;
    margin: 0 auto;
    text-align: center;
    margin: 0 auto;
  }
  .footer{
    bottom: 60px;
    height: 2rem;          /* Footer height */
  }
  .quote-font-size{
    font-size: 20px;
  }
  .roles-font-size{
    font-size: 40px;
    height: 48px;
  }
}

